--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.93.11.172:53306/axon-shop?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:53306/axonshop?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
@@ -8,13 +8,8 @@ spring.jpa.database=mysql
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-spring.data.mongodb.uri=mongodb://onion:onion@47.93.11.172:27017/axon-shop
-spring.data.mongodb.host=47.93.11.172
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=axon-shop
-spring.data.mongodb.username=onion
-spring.data.mongodb.password=onion
-
-mongodb.dbname=axon
+spring.data.mongodb.uri=mongodb://onion:onion@127.0.0.1:27017/
+spring.data.mongodb.database=axonshop
+        
 mongodb.events.collection.name=events
 mongodb.events.snapshot.collection.name=snapshots
