--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-##spring.datasource.url=jdbc:mysql://127.0.0.1:53306/axonshop?useSSL=false&allowPublicKeyRetrieval=true
-#spring.datasource.url=jdbc:mysql://127.0.0.1:53306/axonshop?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.format_sql = true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:53306/axonshop?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=onion
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.data.mongodb.uri=mongodb://onion:onion@127.0.0.1:27017/
 spring.data.mongodb.database=axonshop
