有关saga的配置 目前尚未实践

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-spring.data.mongodb.uri=mongodb://onion:onion@127.0.0.1:27017/
-spring.data.mongodb.database=axonshop
+#spring.data.mongodb.uri=mongodb://onion:onion@127.0.0.1:27017/
+#spring.data.mongodb.database=axonshop
 
-mongodb.events.collection.name=events
-mongodb.events.snapshot.collection.name=snapshots
+#mongodb.events.collection.name=events
+#mongodb.events.snapshot.collection.name=snapshots
