--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:53306/axonshop?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=onion
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
